--- a/Assignment HTML/Assignment No 10/style.css
+++ b/Assignment HTML/Assignment No 10/style.css
@@ -1,19 +1,34 @@
-ul{
-   list-style: none;
-   
-}
-li{
-    float: left;
-    width: 200px;
-    height: 40px;
 
-}
-a{
-    align-items: center;
-    text-decoration: none;
-}
-.li{
-  align-items: center;
-    padding-top: 20px;
-    padding-left: 0px;
-}
+        ul{
+            
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            margin-left: 50px;
+        }
+        ul li{
+            float: left;
+            width: 150px;
+            line-height: 30px;
+            text-align: center;
+            background-color: rgb(195, 14, 180);
+            
+        }
+        li{
+            text-align: center;
+        }
+        a{
+            text-decoration: none;
+            color: gold;
+        }
+        a:hover{
+            color: white;
+        }
+        ul li ul li{
+            display: none;
+        }
+        ul li:hover ul li{
+            display: block;
+        }
+  
+
